Added instructions to use Netbeans 18

--- a/documentation/network1.tex
+++ b/documentation/network1.tex
@@ -62,7 +62,9 @@ This tutorial and the code is based on the Python programming language and objec
 \label{sec11}
 
 The existing code is provided as a Netbeans project. You may use Netbeans or an alternative of your choice.
-\paragraph*{To use Netbeans:} Download and install \href{https://netbeans.apache.org/download/index.html}{Netbeans}. Follow the \href{https://plugins.netbeans.apache.org/catalogue/?id=89}{instructions here} to install the Python plugin. Download a copy of this Git repository:
+\paragraph*{To use Netbeans:} Download and install \href{https://netbeans.apache.org/download/index.html}{Netbeans}. Follow the \href{https://plugins.netbeans.apache.org/catalogue/?id=89}{instructions here} to install the Python plugin. You may need \href{https://netbeans.apache.org/download/nb18/}{Netbeans version 18} for the plugin to work.
+
+ Download a copy of this Git repository:
 
 \noindent \href{https://github.com/mwlevin/STApractice_python.git}{https://github.com/mwlevin/STApractice\_python.git}. Alternatively, you can \href{https://netbeans.org/kb/docs/ide/git.html#clone}{clone it in Netbeans}.
 
